Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/AP_Site_Visit__c.object-meta.xml
<CustomObject>
    <label>APPL Site Visit</label>
    <nameField>
        <displayFormat>Visit-{000000}</displayFormat>
        <label>AP Site Visit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AP Site Visits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>