Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <description>This field is created report purpose only.</description>
    <formula>Party_Name__r.Id</formula>
    <label>Account Id</label>
    <type>Text</type>
</CustomField>