Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Account_Plumbing_Club_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Plumbing_Club_ID__c</fullName>
    <formula>Party_Name__r.Plumbing_club_ID__c</formula>
    <label>Account Plumbing Club ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>