Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Account_status__c.field-meta.xml
<CustomField>
    <fullName>Account_status__c</fullName>
    <formula>TEXT(Party_Name__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account status</label>
    <type>Text</type>
</CustomField>