Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Action_Date1__c.field-meta.xml
<CustomField>
    <fullName>Action_Date1__c</fullName>
    <label>Action Date</label>
    <type>Date</type>
</CustomField>