Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Action_plan1__c.field-meta.xml
<CustomField>
    <fullName>Action_plan1__c</fullName>
    <label>Action plan</label>
    <length>80</length>
    <type>Text</type>
</CustomField>