Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Action_Plan__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan__c</fullName>
    <label>Action Plan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>