Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Actual_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Created_Date__c</fullName>
    <label>Actual Created Date</label>
    <type>DateTime</type>
</CustomField>