Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Actual_LastModified_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_LastModified_Date__c</fullName>
    <label>Actual LastModified Date</label>
    <type>DateTime</type>
</CustomField>