Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Actual_Visit_Type_del__c.field-meta.xml
<CustomField>
    <fullName>Actual_Visit_Type_del__c</fullName>
    <formula>text(AP_Tour_Plan__r.Actual_Visit_Type__c)</formula>
    <label>Actual_Visit_Type</label>
    <type>Text</type>
</CustomField>