Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Actuals_visit_type__c.field-meta.xml
<CustomField>
    <fullName>Actuals_visit_type__c</fullName>
    <formula>if(INCLUDES( AP_Tour_Plan__r.Visit_Type__c ,&quot;Head Quarter&quot;),&quot;Head Quarter&quot;,NULL)+
if(INCLUDES( AP_Tour_Plan__r.Visit_Type__c ,&quot;Ex-Station&quot;),&quot;Ex-Station&quot;,NULL)+
if(INCLUDES( AP_Tour_Plan__r.Visit_Type__c ,&quot;Out Station&quot;),&quot;Out Station&quot;,NULL)+
if(INCLUDES( AP_Tour_Plan__r.Visit_Type__c ,&quot;Leave&quot;),&quot;Leave&quot;,NULL)+
if(INCLUDES( AP_Tour_Plan__r.Visit_Type__c ,&quot;Holiday&quot;),&quot;Holiday&quot;,NULL)+
if(INCLUDES( AP_Tour_Plan__r.Visit_Type__c ,&quot;Meetings/Training/Others&quot;),&quot;Meetings/Training/Others&quot;,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planed visit type</label>
    <type>Text</type>
</CustomField>