Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Address_of_account__c.field-meta.xml
<CustomField>
    <fullName>Address_of_account__c</fullName>
    <formula>Party_Name__r.Address_of_account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address of account</label>
    <type>Text</type>
</CustomField>