Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Adopted_Plumber__c.field-meta.xml
<CustomField>
    <fullName>Adopted_Plumber__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Adopted Plumber</label>
    <type>Checkbox</type>
</CustomField>