Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/AP_Tour_Plan__c.field-meta.xml
<CustomField>
    <fullName>AP_Tour_Plan__c</fullName>
    <label>Tour Plan</label>
    <referenceTo>AP_Tour_Plan__c</referenceTo>
    <relationshipLabel>AP Site Visits</relationshipLabel>
    <relationshipName>AP_Site_Visits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>