Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Bandhan_Customer__c.field-meta.xml
<CustomField>
    <fullName>Bandhan_Customer__c</fullName>
    <formula>Party_Name__r.Bandhan_Cutsomer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bandhan Customer</label>
    <type>Checkbox</type>
</CustomField>