Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Bandhan_Plumbing_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Bandhan_Plumbing_Created_Date__c</fullName>
    <formula>Party_Name__r.Bandhan_Created_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bandhan Plumbing Created Date</label>
    <type>Date</type>
</CustomField>