Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Beat_Plan_From_MAP__c.field-meta.xml
<CustomField>
    <fullName>Beat_Plan_From_MAP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>updates the beat plan if checked in from maps</description>
    <label>Beat Plan From MAP</label>
    <referenceTo>Beat_Plan__c</referenceTo>
    <relationshipLabel>AP Site Visits</relationshipLabel>
    <relationshipName>AP_Site_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>