Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Branding_Request__c.field-meta.xml
<CustomField>
    <fullName>Branding_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <description>from visit entry page</description>
    <label>Branding Request</label>
    <type>Checkbox</type>
</CustomField>