Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Branding_Type__c.field-meta.xml
<CustomField>
    <fullName>Branding_Type__c</fullName>
    <label>Branding Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inshop</fullName>
            </value>
            <value>
                <fullName>Outshop</fullName>
            </value>
            <value>
                <fullName>POP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>