Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/BrandType__c.field-meta.xml
<CustomField>
    <fullName>BrandType__c</fullName>
    <label>BrandType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inshop</fullName>
            </value>
            <value>
                <fullName>Outshop</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>