Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Call_Center_Person_Name__c.field-meta.xml
<CustomField>
    <fullName>Call_Center_Person_Name__c</fullName>
    <label>Call Center Person Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Call Center Executive 1</fullName>
            </value>
            <value>
                <fullName>Call Center Executive 2</fullName>
            </value>
            <value>
                <fullName>Call Center Executive 3</fullName>
            </value>
            <value>
                <fullName>Call Center Executive 4</fullName>
            </value>
            <value>
                <fullName>Call Center Executive 5</fullName>
            </value>
            <value>
                <fullName>Call Center Executive 6</fullName>
            </value>
            <value>
                <fullName>Call Center Executive 7</fullName>
            </value>
            <value>
                <fullName>Call Center Executive 8</fullName>
            </value>
            <value>
                <fullName>Call Center Executive 9</fullName>
            </value>
            <value>
                <fullName>Call Center Executive 10</fullName>
            </value>
            <value>
                <fullName>Call Center Executive 11</fullName>
            </value>
            <value>
                <fullName>Call Center Executive 12</fullName>
            </value>
            <value>
                <fullName>Call Center Executive 13</fullName>
            </value>
            <value>
                <fullName>Call Center Executive 14</fullName>
            </value>
            <value>
                <fullName>Call Center Executive 15</fullName>
            </value>
            <value>
                <fullName>Call Center Executive 16</fullName>
            </value>
            <value>
                <fullName>Call Center Executive 17</fullName>
            </value>
            <value>
                <fullName>Call Center Executive 18</fullName>
            </value>
            <value>
                <fullName>Call Center Executive 19</fullName>
            </value>
            <value>
                <fullName>Call Center Executive 20</fullName>
            </value>
            <value>
                <fullName>Call Center Executive 21</fullName>
            </value>
            <value>
                <fullName>Call Center Executive 22</fullName>
            </value>
            <value>
                <fullName>Call Center Executive 23</fullName>
            </value>
            <value>
                <fullName>Call Center Executive 24</fullName>
            </value>
            <value>
                <fullName>Call Center Executive 25</fullName>
            </value>
            <value>
                <fullName>Call Center Executive 26</fullName>
            </value>
            <value>
                <fullName>Call Center Executive 27</fullName>
            </value>
            <value>
                <fullName>Call Center Executive 28</fullName>
            </value>
            <value>
                <fullName>Call Center Executive 29</fullName>
            </value>
            <value>
                <fullName>Call Center Executive 30</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>