Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/CheckOut_Address__c.field-meta.xml
<CustomField>
    <fullName>CheckOut_Address__c</fullName>
    <label>CheckOut Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>