Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/CheckOut_location__c.field-meta.xml
<CustomField>
    <fullName>CheckOut_location__c</fullName>
    <label>CheckOut location</label>
    <scale>8</scale>
    <type>Location</type>
</CustomField>