Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Checkout_Time__c.field-meta.xml
<CustomField>
    <fullName>Checkout_Time__c</fullName>
    <label>Checkout Time</label>
    <type>Time</type>
</CustomField>