Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Checkout_TimeValue__c.field-meta.xml
<CustomField>
    <fullName>Checkout_TimeValue__c</fullName>
    <formula>IF( !ISBLANK(CheckOut_Address__c  ) , TIMEVALUE( NOW()+((5 * 60) + 30)/1440)  ,null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Checkout TimeValue</label>
    <type>Time</type>
</CustomField>