Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Industrial Vertical enters a company name of an Account</description>
    <label>Company Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>AP Site Visits (Company Name)</relationshipLabel>
    <relationshipName>AP_Site_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>