Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Compensatory_Leave__c.field-meta.xml
<CustomField>
    <fullName>Compensatory_Leave__c</fullName>
    <label>Compensatory Leave</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>