Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Compensatory_Leave_Date__c.field-meta.xml
<CustomField>
    <fullName>Compensatory_Leave_Date__c</fullName>
    <label>Compensatory Leave Date</label>
    <type>Date</type>
</CustomField>