Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Competitors_Information__c.field-meta.xml
<CustomField>
    <fullName>Competitors_Information__c</fullName>
    <label>Competitors Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>