Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Contact_Party_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Party_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Party Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>AP Site Visits (Contact Party Type)</relationshipLabel>
    <relationshipName>AP_Site_Visits1</relationshipName>
    <type>Lookup</type>
</CustomField>