Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Contact_person_name__c.field-meta.xml
<CustomField>
    <fullName>Contact_person_name__c</fullName>
    <label>Contact person name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>