Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Contactperson__c.field-meta.xml
<CustomField>
    <fullName>Contactperson__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>AP Site Visits</relationshipLabel>
    <relationshipName>AP_Site_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>