Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/CPVC_Order_Value__c.field-meta.xml
<CustomField>
    <fullName>CPVC_Order_Value__c</fullName>
    <description>Created to capture scheme</description>
    <label>CPVC Order Value</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>