Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Created_date_and_time__c.field-meta.xml
<CustomField>
    <fullName>Created_date_and_time__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created date and time</label>
    <type>DateTime</type>
</CustomField>