Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Created_owner_role__c.field-meta.xml
<CustomField>
    <fullName>Created_owner_role__c</fullName>
    <formula>CreatedBy.UserRole.Name</formula>
    <label>Created owner role</label>
    <type>Text</type>
</CustomField>