Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Custom_lookup_for_party_name__c.field-meta.xml
<CustomField>
    <fullName>Custom_lookup_for_party_name__c</fullName>
    <label>Custom lookup for party name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>