Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Date_Of_Next_Visit__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Next_Visit__c</fullName>
    <label>Date Of Next Visit</label>
    <type>Date</type>
</CustomField>