Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Date_Plan__c.field-meta.xml
<CustomField>
    <fullName>Date_Plan__c</fullName>
    <formula>DATEVALUE( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Plan</label>
    <type>Date</type>
</CustomField>