Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Date_Text__c.field-meta.xml
<CustomField>
    <fullName>Date_Text__c</fullName>
    <formula>Text(Date__c)</formula>
    <label>Date.</label>
    <type>Text</type>
</CustomField>