Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Dealer_Club_names_2_0__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Club_names_2_0__c</fullName>
    <formula>TEXT( Party_Name__r.Dealer_Club_names_2_0__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dealer Club names 2.0</label>
    <type>Text</type>
</CustomField>