Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Dealer_visit_actual_calculation__c.field-meta.xml
<CustomField>
    <fullName>Dealer_visit_actual_calculation__c</fullName>
    <formula>TEXT(Purpose_of_Visit__c)&amp;Remarks__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dealer visit actual calculation</label>
    <type>Text</type>
</CustomField>