Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <formula>Party_Name__r.Designation__c</formula>
    <label>Designation</label>
    <type>Text</type>
</CustomField>