Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Designation_contact__c.field-meta.xml
<CustomField>
    <fullName>Designation_contact__c</fullName>
    <formula>Contact_Party_Type__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Designation</label>
    <type>Text</type>
</CustomField>