Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/EC__c.field-meta.xml
<CustomField>
    <fullName>EC__c</fullName>
    <formula>Excellence_type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EC</label>
    <type>Text</type>
</CustomField>