Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Exact_match_of_date__c.field-meta.xml
<CustomField>
    <fullName>Exact_match_of_date__c</fullName>
    <formula>IF(Date__c==  DATEVALUE( CreatedDate) ,true,false)</formula>
    <label>Exact match of date</label>
    <type>Checkbox</type>
</CustomField>