Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Excellence_type__c.field-meta.xml
<CustomField>
    <fullName>Excellence_type__c</fullName>
    <formula>TEXT(Party_Name__r.Club_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Excellence type</label>
    <type>Text</type>
</CustomField>