Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Financial_Support_Needed__c.field-meta.xml
<CustomField>
    <fullName>Financial_Support_Needed__c</fullName>
    <label>Financial Support Needed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>