Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Generate_Order__c.field-meta.xml
<CustomField>
    <fullName>Generate_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate Order</label>
    <type>Checkbox</type>
</CustomField>