Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Geo_Address__c.field-meta.xml
<CustomField>
    <fullName>Geo_Address__c</fullName>
    <label>Geo Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>