Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Geo_Location__c.field-meta.xml
<CustomField>
    <fullName>Geo_Location__c</fullName>
    <label>Geo Location</label>
    <scale>5</scale>
    <type>Location</type>
</CustomField>