Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Is_Leave_Approved__c.field-meta.xml
<CustomField>
    <fullName>Is_Leave_Approved__c</fullName>
    <label>Is Leave Approved ?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>