Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Last_Modified_Date_time__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Date_time__c</fullName>
    <formula>LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Modified Date/time</label>
    <type>DateTime</type>
</CustomField>