Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Last_Visited_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Visited_Date__c</fullName>
    <formula>Party_Name__r.Latest_Visit_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Visited Date</label>
    <type>Date</type>
</CustomField>