Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Leave_Date__c.field-meta.xml
<CustomField>
    <fullName>Leave_Date__c</fullName>
    <label>Leave Date</label>
    <type>Date</type>
</CustomField>