Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Location1__c.field-meta.xml
<CustomField>
    <fullName>Location1__c</fullName>
    <formula>Party_Name__r.City__c</formula>
    <label>Visits Actual Location</label>
    <type>Text</type>
</CustomField>