Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Location_on_Map__c.field-meta.xml
<CustomField>
    <fullName>Location_on_Map__c</fullName>
    <formula>IMAGE(&apos;https://maps.googleapis.com/maps/api/staticmap?zoom=13&amp;size=300x200&amp;markers=color:green|label:L|&apos;+ TEXT(Geo_Location__Latitude__s) + &apos;,&apos; + TEXT(Geo_Location__Longitude__s), &apos;Location&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location on Map</label>
    <type>Text</type>
</CustomField>