Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Market_Type__c.field-meta.xml
<CustomField>
    <fullName>Market_Type__c</fullName>
    <formula>IF((TEXT(AP_Tour_Plan__r.Market_Type__c)==&apos;new&apos; ), &apos;New&apos;, &apos;Existing&apos;)</formula>
    <label>Market Type</label>
    <type>Text</type>
</CustomField>