Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/MediaType__c.field-meta.xml
<CustomField>
    <fullName>MediaType__c</fullName>
    <label>MediaType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>4x2</fullName>
            </value>
            <value>
                <fullName>6x3</fullName>
            </value>
            <value>
                <fullName>8x3</fullName>
            </value>
            <value>
                <fullName>8x4</fullName>
            </value>
            <value>
                <fullName>PoP Boards</fullName>
            </value>
            <value>
                <fullName>Hanging Boards</fullName>
            </value>
            <value>
                <fullName>Shelf Stickers</fullName>
            </value>
            <value>
                <fullName>Product Stickers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>