Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Meeting_Type__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Type__c</fullName>
    <label>Meeting Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Depot Meet</fullName>
            </value>
            <value>
                <fullName>Office Meet</fullName>
            </value>
            <value>
                <fullName>Review Meet</fullName>
            </value>
            <value>
                <fullName>CSO</fullName>
            </value>
            <value>
                <fullName>Other Meet</fullName>
            </value>
            <value>
                <fullName>Market Visit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>