Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Number__c</fullName>
    <description>This field is used cause used in reports.</description>
    <formula>Party_Name__r.Contact_Number_Mobile__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile Number</label>
    <type>Text</type>
</CustomField>