Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/MOM__c.field-meta.xml
<CustomField>
    <fullName>MOM__c</fullName>
    <label>MOM</label>
    <type>TextArea</type>
</CustomField>