Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/No_Of_Activities__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Activities__c</fullName>
    <label>No. Of Activities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>