Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/No_Of_Activities_Dup__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Activities_Dup__c</fullName>
    <formula>Promotion__r.No_Of_Activities__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No. Of Activities (Dup)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>