Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/No_of_Enquiries__c.field-meta.xml
<CustomField>
    <fullName>No_of_Enquiries__c</fullName>
    <label>No. of Enquiries</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>