Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/NPTB__c.field-meta.xml
<CustomField>
    <fullName>NPTB__c</fullName>
    <label>NPTB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>