Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/NPTB_Aqua__c.field-meta.xml
<CustomField>
    <fullName>NPTB_Aqua__c</fullName>
    <label>NPTB-AQUA</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>