Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/NPTB_SWR__c.field-meta.xml
<CustomField>
    <fullName>NPTB_SWR__c</fullName>
    <label>NPTB-SWR</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>