Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/NPTB_V_A__c.field-meta.xml
<CustomField>
    <fullName>NPTB_V_A__c</fullName>
    <label>NPTB-V&amp;A</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>